adding guard to automatically build and also more refactorings

--- a/shell/pages/todo/todoForm.haml
+++ b/shell/pages/todo/todoForm.haml
@@ -1,10 +1,8 @@
 %div#todoForm.page
   %h3 A ToDo List
-  %div#todos
-  %input#todo_input
-  %button#add_todo Add
-  %span#todo_output
-  %div#todo_outputs
+  %input#task_input
+  %button#add_task Add
+  %div#tasks
 
 
     
